# VoxelWorld

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  Doxyfile  DoxyfileTemplate  LICENSE  README.md  depmanager.yml  gcovr.cfg  run_doc_server.sh
source/: CMakeLists.txt  main.cpp
source/owl/: CMakeLists.txt  owl.h  owlpch.cpp  owlpch.h
source/owl/core/: Application.cpp  Application.h  Assert.h  Core.cpp  Core.h  EngineGLFW.cpp  EngineGLFW.h  EntryPoint.h  Environment.cpp  Environment.h  KeyCodes.h  Log.cpp  Log.h  Macros.h  Memory.h  MouseCode.h  PlatformUtils.h  ResourceManager.cpp  ResourceManager.h  Timestep.cpp  Timestep.h  Tracker.cpp  Tracker.h  UUID.cpp  UUID.h
source/owl/core/assets/: Asset.h  AssetLibrary.h
source/owl/core/layer/: Layer.h  LayerStack.cpp  LayerStack.h
source/owl/core/task/: Scheduler.cpp  Scheduler.h  Task.cpp  Task.h  Timer.cpp  Timer.h
source/owl/core/utils/: FileDialog.cpp  FileDialog.h  FileUtils.cpp  FileUtils.h
source/owl/debug/: Profiler.cpp  Profiler.h  Tracker.cpp  Tracker.h  TrackerClient.h  TrakerClient.h
source/owl/event/: AppEvent.h  Event.cpp  Event.h  KeyEvent.h  MouseEvent.h
source/owl/fonts/: Font.cpp  Font.h  FontLibrary.cpp  FontLibrary.h
source/owl/gui/: BaseDrawPanel.cpp  BaseDrawPanel.h  BasePanel.cpp  BasePanel.h  ImGuiLayer.cpp  ImGuiLayer.h  Roboto-Bold.embed  Roboto-Italic.embed  Roboto-Regular.embed  Theme.cpp  Theme.h  UILayer.cpp  UILayer.h  UiLayer.cpp  UiLayer.h  utils.h
source/owl/gui/component/: render.cpp  render.h
source/owl/gui/widgets/: Button.cpp  Button.h  ButtonBar.cpp  ButtonBar.h  Widget.h
source/owl/input/: CameraOrthoController.cpp  CameraOrthoController.h  Input.h  KeyCodes.h  MouseCode.h  Window.cpp  Window.h  input.cpp
source/owl/input/glfw/: Input.cpp  Input.h  PlatformUtils.cpp  Window.cpp  Window.h
source/owl/input/null/: Input.cpp  Input.h  Window.cpp  Window.h
source/owl/input/video/: Device.cpp  Device.h  Manager.cpp  Manager.h
source/owl/io/serial/: Device.cpp  Device.h  Manager.cpp  Manager.h
source/owl/io/video/: Device.cpp  Device.h  Manager.cpp  Manager.h
source/owl/math/: ColorSpace.h  Transform.cpp  Transform.h  YamlSerializers.h  box.h  linAlgebra.cpp  linAlgebra.h  math.h  matrices.h  matrixCreation.h  quaternion.h  simpleFunctions.h  sizingTypes.cpp  sizingTypes.h  trigonometry.cpp  trigonometry.h  vectors.h
source/owl/physic/: PhysicCommand.cpp  PhysicCommand.h
source/owl/renderer/: Buffer.cpp  Buffer.h  Camera.h  CameraEditor.cpp  CameraEditor.h  CameraOrtho.cpp  CameraOrtho.h  DrawData.cpp  DrawData.h  Framebuffer.cpp  Framebuffer.h  GraphContext.cpp  GraphContext.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.cpp  Texture.h  TextureLibrary.cpp  TextureLibrary.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
source/owl/renderer/null/: Buffer.cpp  Buffer.h  DrawData.cpp  DrawData.h  (+14 more)
source/owl/scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneBody.cpp  SceneBody.h  SceneCamera.cpp  SceneCamera.h  ScenePlayer.cpp  ScenePlayer.h  SceneSerializer.cpp  SceneSerializer.h  SceneTrigger.cpp  SceneTrigger.h  ScriptableEntity.cpp  ScriptableEntity.h
source/owl/sound/: SoundAPI.cpp  SoundAPI.h  SoundCommand.cpp  SoundCommand.h  SoundData.cpp  SoundData.h  SoundLibrary.cpp  SoundLibrary.h  SoundSystem.cpp  SoundSystem.h
source/owl/window/: Window.cpp  Window.h
source/owlcast/: CMakeLists.txt  imgui.ini
source/owlcast/sources/: EditorLayer.cpp  EditorLayer.h  main.cpp
source/owldrone/: CMakeLists.txt  droneLayer.cpp  droneLayer.h  imgui.ini  main.cpp
source/owldrone/sources/: DroneLayer.h  droneLayer.cpp  droneLayer.h  main.cpp
source/owlnest/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  imgui.ini  main.cpp  theme.yml
source/owlnest/panel/: ContentBrowser.cpp  ContentBrowser.h  SceneHierarchy.cpp  SceneHierarchy.h
source/owlnest/runner/: RunnerLayer.cpp  RunnerLayer.h  main.cpp
source/owlnest/sources/: EditorLayer.cpp  EditorLayer.h  main.cpp
source/sandbox/: CMakeLists.txt  base2D.cpp  base2D.h  baseLayer.cpp  baseLayer.h  main.cpp
source/sandbox/sources/: base2D.cpp  base2D.h  main.cpp
source/vw/core/: EngineGLFW.cpp  EngineGLFW.h  Tracker.cpp  Tracker.h
source/vw/fs/: DataFile.cpp  DataFile.h
source/vw/geom/: Angle.cpp  Angle.h  Vector2.h  Vector3.h  Voxel.cpp  Voxel.h  VoxelTree.cpp  VoxelTree.h  VoxelTreeNode.cpp  VoxelTreeNode.h
source/vw/math/: simpleFunctions.h
test/: CMakeLists.txt
test/core_tests/: application_test.cpp  assetLibrary_test.cpp  async_test.cpp  core_test.cpp  env_test.cpp  log_test.cpp  time_test.cpp  tracker_test.cpp  uuid_test.cpp  version_test.cpp
test/debug_tests/: profiler_test.cpp  tracker_test.cpp
test/event_tests/: AppEvent_test.cpp  Event_test.cpp  KeyEvent_test.cpp  MouseEvent_test.cpp
test/font_tests/: fontLibrary_test.cpp
test/geom_tests/: VoxelTreeNode_test.cpp  VoxelTree_test.cpp  angle_test.cpp  vector2_test.cpp  vector3_test.cpp
test/gui_tests/: ImGuiLayer_test.cpp  component_test.cpp  drawpanel_test.cpp  theme_test.cpp
test/input_tests/: CameraControler_test.cpp  Input_test.cpp  Window_test.cpp
test/layer_tests/: LayerStack_test.cpp  Layer_test.cpp
test/math_tests/: baseMath.cpp  box_test.cpp  compare_test.cpp  matrix_test.cpp  quaternion_test.cpp  simpleFunction_test.cpp  sizingtype_test.cpp  transform_test.cpp  trigonometry_test.cpp  vector_test.cpp
test/physic_tests/: PhysicCommand_tests.cpp
test/renderer_tests/: Buffer_tests.cpp  CameraEditor_test.cpp  FrameBuffer_tests.cpp  Renderer2D_test.cpp  RendererAPI_test.cpp  Renderer_test.cpp  ShaderLibrary_test.cpp  TextureLibrary_test.cpp  Texture_test.cpp
test/scene_tests/: Entity_test.cpp  SceneSerializer_test.cpp  Scene_test.cpp  ScriptableEntity_test.cpp  Transform_test.cpp  components_test.cpp
test/sound_tests/: SoundSystem_test.cpp
test/test_helper/: mathHelpers.h  testHelper.h
(+245 files in other folders)
